Fix the text alignment
remove margin-left/right auto and width 90% in section1,2,3

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -34,9 +34,7 @@
 .section1, .section2, .section3 {
 	position: relative;
 	text-align: justify;
-	width:90%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 25px;
 	border: 1px solid black;
 	padding: 30px;
 	font-size: 100%;
@@ -75,7 +73,6 @@ h1 {
 	.col-md-6 {
 		float: left;
 		width: 50%;
-
 	}
 
 	.col-md-12 {
@@ -91,7 +88,6 @@ h1 {
 	.col-sm-12 {
 		float: left;
 		width: 100%;
-
 	}
 
 }
